<resources>
    <string name="app_name">SignInScreenUIDesign</string>
    <string name="sign_in_to_stay_fit">Sign in to stay fit</string>
    <string name="save_money_with_our_membership_cards">Save money with our\nmembership cards</string>
    <string name="email">email</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="password_hint">******</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
</resources>