<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/weightlifter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_in_to_stay_fit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/save_money_with_our_membership_cards"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSignIn" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/email_gmail_com"
        android:inputType="textEmailAddress"
        android:minHeight="35dp"
        android:textColorHint="@color/colorTextHint"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewEmailDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/at"
        app:layout_constraintBottom_toTopOf="@id/viewEmailDivider"
        app:layout_constraintStart_toStartOf="@id/viewEmailDivider"
        app:layout_constraintTop_toTopOf="@id/textEmail"
        app:tint="@color/colorInputImage" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/viewPasswordDivider"
        app:layout_constraintStart_toEndOf="@id/imagePassword"
        app:layout_constraintTop_toBottomOf="@id/viewEmailDivider" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="35dp"
        android:textColorHint="@color/colorTextHint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/viewPasswordDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewPasswordDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/password"
        app:layout_constraintBottom_toTopOf="@id/viewPasswordDivider"
        app:layout_constraintStart_toStartOf="@id/viewPasswordDivider"
        app:layout_constraintTop_toTopOf="@id/textPassword"
        app:tint="@color/colorInputImage" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/viewPasswordDivider" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <LinearLayout
        android:id="@+id/socialIcon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/twitter" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/socialIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>